tests/baselines/reference/parserComputedPropertyName25.errors.txt
parserComputedPropertyName25.ts(3,6): error TS2304: Cannot find name 'e'.
parserComputedPropertyName25.ts(4,6): error TS2304: Cannot find name 'e2'.


==== parserComputedPropertyName25.ts (2 errors) ====
    class C {
        // No ASI
        [e] = 0
         ~
!!! error TS2304: Cannot find name 'e'.
        [e2] = 1
         ~~
!!! error TS2304: Cannot find name 'e2'.
    }